fixing width and height issues on mobile

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ p {
 	color: #d81760;
 }
 
-@media only screen 
+/*@media only screen 
 and (min-device-width : 320px) 
 and (max-device-width : 480px) {
 body {
@@ -73,4 +73,4 @@ body {
 html {
 	max-width: 320px;
 }
-}
+}*/
